@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.735 2003/02/19 02:25:29 fsgiudice Exp $
+ * $Id: ChangeLog,v 1.736 2003/02/19 10:16:27 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,17 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-02-19 11:50 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * source/vm/classes.c
+  * source/vm/thread.c
+  * include/hbstack.h
+    ! Current selected method was stored in a static module variable.
+      This practice was not thread safe, and I have moved the s_pMethod
+      variable into the stack.
+      THIS REQUIRE MAKE CLEAN IN ORDER TO WORK, or (probably) any
+      application using classes could crash.
+
 
 2003-02-19 11:15 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/vm/hvm.c
